--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "pretty": "^2.0.0",
     "re-resizable": "^6.9.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "modified":"PUBLIC_URL=http://ec2-13-232-84-9.ap-south-1.compute.amazonaws.com/json-to-form/build/ npm run build"
+    "modified": "PUBLIC_URL=http://ec2-13-232-84-9.ap-south-1.compute.amazonaws.com/json-to-form/build/ npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-	"homepage":"http://ec2-13-232-84-9.ap-south-1.compute.amazonaws.com/json-to-form/build/"
+  "homepage": "http://ec2-13-232-84-9.ap-south-1.compute.amazonaws.com/json-to-form/build/"
 }
