--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-textarea-code-editor": "^2.0.1",
+    "html-react-parser": "^1.4.10",
+    "prettier": "^2.6.2",
     "pretty": "^2.0.0",
+    "prismjs": "^1.27.0",
     "re-resizable": "^6.9.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "react-simple-code-editor": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
